--- a/cicd-kube-docker/Jenkinsfile
+++ b/cicd-kube-docker/Jenkinsfile
@@ -100,7 +100,7 @@ pipeline {
         stage('Kubernetes Deploy') {
           agent {label 'KOPS'}
             steps {
-              sh "helm upgrade --install --force vprofile-stack helm/vprocharts --set appimage=${registry}:V${BUILD_NUMBER} --namespace prod"
+              sh "helm upgrade --install --force vpro-stack helm/vprocharts --set appimage=${registry}:V${BUILD_NUMBER} --namespace prod"
             }
         }
     }
