--- a/cicd-kube-docker/Jenkinsfile
+++ b/cicd-kube-docker/Jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
 
       stage('BUILD'){
         steps {
-          sh 'mvn clean install -U -DskipTests'
+          sh 'mvn clean install -DskipTests'
         }
         post {
           success {
